--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
+  "name": "hna",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "dev:bolt": "cd bolt-diy && npm run dev",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:bolt\" --kill-others"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@supabase/supabase-js": "^2.47.10",
+    "@uiw/react-md-editor": "^4.0.5",
     "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
+    "openai": "^4.77.4",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-markdown": "^9.0.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "concurrently": "^9.1.2",
     "postcss": "8.4.49",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2"
+    "typescript": "^5.3.3"
   }
 }
